# my_tech_stack_sample

./: .gitignore  LICENSE  README.md  docker-compose.yml  sample.env
UI/: .dockerignore  Dockerfile  README.md  TODO.md  admin_index.html  elm.json  index.html  index.js  index.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
UI/src/: Actions.elm  AdminMain.elm  Api.elm  Components.elm  Helpers.elm  InteropDefinitions.elm  Main.elm  Ports.elm  Routes.elm  Types.elm  Updates.elm  View.elm
UI/src/AnonAPI/: InputObject.elm  Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Subscription.elm  Union.elm  VerifyScalarCodecs.elm
UI/src/AnonAPI/Object/: CreateUserOutput.elm  JsonWebToken.elm  User_mutation_response.elm
UI/src/BackendAPI/: InputObject.elm  Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Subscription.elm  Union.elm  VerifyScalarCodecs.elm
UI/src/BackendAPI/Enum/: Order_by.elm  (+4 more)
UI/src/Pages/: Home.elm
api/: Dockerfile  README.md  TODO.md  pyproject.toml
api/api/: client.py  main.py  types.py
api/api/user/: routes.py  schema.py
api/tests/: conftest.py  test_api.py  test_user_schemas.py
hasura/metadata/: actions.graphql  actions.yaml
hasura/metadata/databases/: databases.yaml
hasura_settings/: Actions.txt  tables.txt
src/: main.py
src/UI/: index.html  packange.json  tailwind.config.js
src/UI/src/: Actions.elm  Components.elm  Main.elm  Types.elm  Updates.elm
src/Users/: routes.py  schema.py
src/tests/: test_main.py
(+18 files in other folders)
