[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["farooq-azam-khan <farooq1.khan@ryerson.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
